There is a problem using floor(x*10000)/10000 to reduce precision. For values like 0.50149999999999996 this operation will subtract 1/10000 for every run (5014 -> 5013 -> 5012...). It's not mathematical correct but floating point arithmetics on a computer are not mathematically correct sometimes. If such a value is calculated for fit-to-window as 5014 and truncated to 5013 it will be set by setZoomFactor as 5012. Now snapZoom() is fooled when the current zoom is 5012 and the desired one is 0.6, it will snap to 5013 (set as 5012 - and forever again) disabling any zooming.

Using round(x*10000)/10000 instead of floor solves the problem for me.

BUG: 202332

svn path=/trunk/extragear/graphics/digikam/; revision=1006803